--- a/To-Do List/Base.lproj/Main.storyboard
+++ b/To-Do List/Base.lproj/Main.storyboard
@@ -109,13 +109,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mj0-nN-Bry">
-                                <rect key="frame" x="8" y="476" width="359" height="30"/>
-                                <state key="normal" title="Create"/>
-                                <connections>
-                                    <action selector="createUpdateActionHandler:" destination="dsk-1u-WMO" eventType="touchUpInside" id="GZ5-F5-ngs"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Task Status:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ehn-Bo-2WS">
                                 <rect key="frame" x="16" y="353" width="343" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -126,10 +119,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="sfR-eo-0sX" firstAttribute="leading" secondItem="y4L-eY-L4p" secondAttribute="leading" constant="16" id="2Lc-bX-afe"/>
-                            <constraint firstItem="mj0-nN-Bry" firstAttribute="leading" secondItem="y4L-eY-L4p" secondAttribute="leading" constant="8" id="3Aq-Cg-Fys"/>
                             <constraint firstItem="AjN-Nl-Sra" firstAttribute="leading" secondItem="y4L-eY-L4p" secondAttribute="leading" constant="16" id="53M-EG-O7K"/>
                             <constraint firstItem="y4L-eY-L4p" firstAttribute="trailing" secondItem="uzd-6n-d0W" secondAttribute="trailing" constant="16" id="53r-ug-KkZ"/>
-                            <constraint firstItem="mj0-nN-Bry" firstAttribute="top" secondItem="AjN-Nl-Sra" secondAttribute="bottom" constant="64" id="5Y1-e1-FvC"/>
                             <constraint firstItem="ehn-Bo-2WS" firstAttribute="top" secondItem="uzd-6n-d0W" secondAttribute="bottom" constant="32" id="6b2-80-e8f"/>
                             <constraint firstItem="5Yr-Cp-epc" firstAttribute="top" secondItem="Beb-yE-DAr" secondAttribute="bottom" constant="32" id="802-48-6Ht"/>
                             <constraint firstItem="y4L-eY-L4p" firstAttribute="trailing" secondItem="AjN-Nl-Sra" secondAttribute="trailing" constant="16" id="8q8-Fb-aKC"/>
@@ -138,7 +129,6 @@
                             <constraint firstItem="Beb-yE-DAr" firstAttribute="top" secondItem="sfR-eo-0sX" secondAttribute="bottom" constant="8" id="KdB-l9-ZS9"/>
                             <constraint firstItem="Beb-yE-DAr" firstAttribute="leading" secondItem="y4L-eY-L4p" secondAttribute="leading" constant="16" id="Khd-5O-6eL"/>
                             <constraint firstItem="5Yr-Cp-epc" firstAttribute="leading" secondItem="y4L-eY-L4p" secondAttribute="leading" constant="16" id="QyA-dR-wSF"/>
-                            <constraint firstItem="y4L-eY-L4p" firstAttribute="trailing" secondItem="mj0-nN-Bry" secondAttribute="trailing" constant="8" id="SLP-KQ-wok"/>
                             <constraint firstItem="sfR-eo-0sX" firstAttribute="top" secondItem="Hro-cI-cLm" secondAttribute="bottom" constant="32" id="SNI-7p-ITY"/>
                             <constraint firstItem="Hro-cI-cLm" firstAttribute="leading" secondItem="y4L-eY-L4p" secondAttribute="leading" constant="16" id="T9I-YY-qVT"/>
                             <constraint firstItem="y4L-eY-L4p" firstAttribute="trailing" secondItem="5Yr-Cp-epc" secondAttribute="trailing" constant="16" id="VwV-Yj-WeB"/>
@@ -155,8 +145,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="y4L-eY-L4p"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Create New Task" id="hu3-4g-ioE">
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="T5d-0i-ChK">
+                            <connections>
+                                <action selector="saveActionClicked:" destination="dsk-1u-WMO" id="Qh2-CV-GdD"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
-                        <outlet property="confirmButton" destination="mj0-nN-Bry" id="y4g-8Q-p51"/>
                         <outlet property="taskDescriptionLabel" destination="Beb-yE-DAr" id="IQb-Rs-vVy"/>
                         <outlet property="taskDueDateLabel" destination="uzd-6n-d0W" id="sIb-8f-G39"/>
                         <outlet property="taskStatusLabel" destination="AjN-Nl-Sra" id="hW5-cD-tm4"/>
@@ -288,33 +284,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LZz-6R-n6o">
-                                <rect key="frame" x="8" y="76" width="360" height="204"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LZz-6R-n6o">
+                                <rect key="frame" x="16" y="80" width="343" height="571"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="239" id="PvO-AH-knu"/>
-                                    <constraint firstAttribute="width" constant="360" id="wWy-gM-Xpj"/>
-                                </constraints>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <fontDescription key="fontDescription" name=".SFNSDisplay" family=".SF NS Display" pointSize="19"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c0M-kA-Bte">
-                                <rect key="frame" x="8" y="365" width="359" height="30"/>
-                                <state key="normal" title="Edit"/>
-                                <connections>
-                                    <segue destination="dsk-1u-WMO" kind="show" identifier="editTaskSegue" id="c2X-cm-unK"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="c0M-kA-Bte" firstAttribute="top" secondItem="LZz-6R-n6o" secondAttribute="bottom" constant="64" id="QJA-Y4-qVs"/>
-                            <constraint firstItem="Hy6-jE-kaj" firstAttribute="trailing" secondItem="c0M-kA-Bte" secondAttribute="trailing" constant="8" id="YG2-dK-eHn"/>
-                            <constraint firstItem="c0M-kA-Bte" firstAttribute="leading" secondItem="Hy6-jE-kaj" secondAttribute="leading" constant="8" id="qAw-mW-hfZ"/>
+                            <constraint firstItem="Hy6-jE-kaj" firstAttribute="bottom" secondItem="LZz-6R-n6o" secondAttribute="bottom" constant="16" id="Ddb-23-5do"/>
+                            <constraint firstItem="LZz-6R-n6o" firstAttribute="leading" secondItem="Hy6-jE-kaj" secondAttribute="leading" constant="16" id="Eqk-1E-Ij1"/>
+                            <constraint firstItem="LZz-6R-n6o" firstAttribute="top" secondItem="Hy6-jE-kaj" secondAttribute="top" constant="16" id="Hxb-f7-24f"/>
+                            <constraint firstItem="Hy6-jE-kaj" firstAttribute="trailing" secondItem="LZz-6R-n6o" secondAttribute="trailing" constant="16" id="QZf-Ua-v1W"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Hy6-jE-kaj"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Task Detail" id="A5r-Cf-gqg">
+                        <barButtonItem key="rightBarButtonItem" title="Edit" id="OQk-1h-Ax9">
+                            <connections>
+                                <segue destination="dsk-1u-WMO" kind="show" identifier="editTaskSegue" id="a26-yL-RgP"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="taskTextView" destination="LZz-6R-n6o" id="7vc-Jj-C4N"/>
                     </connections>
@@ -325,6 +318,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="zC3-v6-ub8"/>
+        <segue reference="a26-yL-RgP"/>
     </inferredMetricsTieBreakers>
 </document>
